welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: not found: value estFacemur
		if (estFacemur()){
                    ^SnakeBuggle:7: error: not found: value EAST
				case d if (d==EAST) => gauche(); if (estFaceMur){droite(); return true}
                                              ^SnakeBuggle:9: error: not found: value WEST
				case d if (d==WEST) => droite(); if (estFaceMur){gauche(); return true}
                                              ^SnakeBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFacemur()){
                ^SnakeBuggle:18: error: not found: value poseBrosse
		poseBrosse()
                ^SnakeBuggle:22: error: not found: value EAST
			case d if (d==EAST) => gauche(); avance(); gauche()
                                      ^SnakeBuggle:23: error: not found: value WEST
			case d if (d==WEST) => droite(); avance(); droite()
                                      ^